--- a/sm4/TestSM4/Makefile
+++ b/sm4/TestSM4/Makefile
@@ -1,5 +1,5 @@
 CC = g++
-CC_FLAGS = -W -Wall -Werror -I./ -I../../includes -I../../tools  -I../ -I/usr/local/include/readerwriterqueue -I/home/xtcgch/Env/redis/redis-6.2.5/deps -L/home/xtcgch/Env/redis/redis-6.2.5/deps/hiredis/build_dir -lhiredis 
+CC_FLAGS = -W -Wall  -I./ -I../../includes -I../../tools  -I../ -I/usr/local/include/readerwriterqueue -I/home/xtcgch/Env/redis/redis-6.2.5/deps -L/home/xtcgch/Env/redis/redis-6.2.5/deps/hiredis/build_dir -lhiredis 
 EXEC = test_sm4
 OBJS = test_sm4.o sm4.o 
 
