--- a/sm4/TestSM4/Makefile
+++ b/sm4/TestSM4/Makefile
@@ -8,7 +8,7 @@ CC_FLAGS += -std=c++11 -fpermissive
 $(EXEC): $(OBJS)
 	$(CC) $(CC_FLAGS) $(OBJS) -o $@
 
-test_sm4.o: test_sm4.cpp
+test_sm4.o: test_sm4.cpp sm4.cpp sm4.h
 	$(CC) $(CC_FLAGS) -c -o $@ test_sm4.cpp
 	
 sm4.o: sm4.cpp sm4.h
