--- a/python/config.ini
+++ b/python/config.ini
@@ -1,7 +1,7 @@
 [mysql]
 IP = 127.0.0.1
 User = root
-Password = GCHdmysqlmms4320528.
+Password = ROOTroot@123456
 CharsetName = utf8
 ClientIP = 127.0.0.1
 Port = 3306
