--- a/golang/https_gin/app/config_parse/config_mysql.json
+++ b/golang/https_gin/app/config_parse/config_mysql.json
@@ -1,6 +1,6 @@
 {
   "database": {
-    "name": "test",
+    "name": "DB_VideoInfo",
     "password": "GCHgch_123456",
     "user": "gch",
     "type": "mysql",
